--- a/src/Exemplo.Web/package.json
+++ b/src/Exemplo.Web/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "exemplo.web",
+  "name": "mvc-core-webpack",
   "version": "1.0.0",
-  "description": "",
+  "description": "Esse projeto tem como objetivo exibir como podemos utilizar o Webpack para fazer build do front-end de um projeto web",
+  "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "build:hot": "webpack-dev-server --hot --inline"
   },
-  "keywords": [],
   "author": "luylucas10",
   "license": "GPL3",
   "dependencies": {
-    "aspnet-prerendering": "^3.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-table": "^1.16.0",
     "jquery": "^3.5.1",
+    "jquery-validation": "^1.19.2",
+    "jquery-validation-unobtrusive": "^3.2.11",
     "popper.js": "^1.16.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
-    "aspnet-webpack": "^3.0.0",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
@@ -33,5 +35,10 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
+  },
+  "-vs-binding": {
+    "ProjectOpened": [
+      "build:hot"
+    ]
   }
 }
