--- a/src/Exemplo.Web/package.json
+++ b/src/Exemplo.Web/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-table": "^1.16.0",
+    "bulma": "^0.9.0",
     "jquery": "^3.5.1",
     "jquery-validation": "^1.19.2",
     "jquery-validation-unobtrusive": "^3.2.11",
